@startuml entity-relationship-diagram

title Governator Entity Relationship Diagram

'!theme blueprint
!theme crt-amber

' avoid problems with angled crows feet
'left to right direction

!define GroupBackground #black

skinparam linetype ortho
skinparam classBorderColor #grey
skinparam BackgroundColor #444

skinparam classBorderColor<<new>> #white
skinparam classBorderThickness<<new>> 1
skinparam classLineStyle<<new>> Dashed
skinparam ClassBackgroundColor<<new>> #204143

' Models

rectangle "Members" GroupBackground {
	entity "User" as user {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
	entity "Group" as group {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
}

rectangle "Core" GroupBackground {
	entity "Role" as role {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
	entity "Permission" as perm {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
}

role }|--|{ user
role }|--|{ group
group }|--|{ user

rectangle "Objects" GroupBackground {
	entity "Database" as database {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
	entity "Catalog" as catalog {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
	entity "Schema" as schema {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
	entity "Relation" as relation {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
	entity "Column" as column {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
	entity "Predicate" as predicate {
		*id: number <<generated>>
		--
		uuid: BINARY(16)
	}
}
database ||--|{ catalog
catalog ||--|{ schema
database ||--|{ schema
schema ||--|{ relation
relation ||--|{ column
relation ||--|{ predicate


role }|--|{ perm

perm ||--|{ database
perm ||--|{ catalog
perm ||--|{ schema
perm ||--|{ relation
perm ||--|{ predicate
